WIP: SDK fixes